# fenics_sycl

./: CMakeLists.txt  assemble_rhs.cpp  assemble_rhs.h  build.sh  dolfin_interface.cpp  dolfin_interface.h  main.cpp  poisson.c  poisson.ufl  setup.sh
cmake/Modules/: FindOpenCL.cmake
